fixed sonarlint warning and added clamp method to transpiler